# nanoclone

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
nanoclone/: __init__.py  __main__.py  cli.py  packfile.py  pktline.py  repo.py  transport.py
tests/: test_against_git.py  test_clone_network.py  test_packfile.py  test_pktline.py
